# Chess-Qt-cpp-Cmake

./: CMakeLists.txt  CMakeLists.txt.user.3d90a66  main.cpp  resource.qrc
headers/: bishop.h  boardposition.h  chessboard.h  chessboardcopy.h  chessboardview.h  chessbox.h  chesspiece.h  game.h  gameenddialog.h  gameview.h  globals.h  imagemanager.h  interface.h  king.h  knight.h  movegenerator.h  movelist.h  movemanager.h  movesstack.h  pawn.h  pawnpromotion.h  queen.h  rook.h  sidebarmenu.h
source/: bishop.cpp  chessboard.cpp  chessboardcopy.cpp  chessboardview.cpp  chessbox.cpp  chesspiece.cpp  game.cpp  gameenddialog.cpp  gameview.cpp  globals.cpp  interface.cpp  king.cpp  knight.cpp  movegenerator.cpp  movelist.cpp  movemanager.cpp  movesstack.cpp  pawn.cpp  pawnpromotion.cpp  queen.cpp  rook.cpp  sidebarmenu.cpp
